--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="colorYellow">#FFFF00</color>
     <color name="seekBarBackground">#A9A9A9</color>
     <color name="gray">#999999</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="seekBarProgress">#EE2C2C</color>
     <color name="colorTransparency">#00000000</color>
 </resources>
