--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="gray">#999999</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="blue">#0000FF</color>
     <color name="seekBarProgress">#EE2C2C</color>
     <color name="colorTransparency">#00000000</color>
 </resources>
