--- a/app/src/main/res/layout/fragment_base_failure.xml
+++ b/app/src/main/res/layout/fragment_base_failure.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:gravity="center"
+    android:background="#F2F2F2"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
