--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <!-- 拖动到边缘渐变颜色 -->
         <item name="colorPrimary">@color/seekBarProgress</item>
         <!--状态栏颜色-->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">#00000000</item>
         <!--控制各个控件的颜色-->
         <item name="colorAccent">@color/seekBarProgress</item>
     </style>
@@ -14,6 +14,16 @@
     <style name="SplashTheme" parent="@android:style/Theme.Translucent.NoTitleBar">
         <item name="android:windowBackground">@color/colorTransparency</item>
         <item name="android:windowNoTitle">true</item> 
+    </style>
+
+    <style name="ToolBarTitleText" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">#ffffffff</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="transparentText" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">#00000000</item>
     </style>
 
 </resources>
