歌单详情页

--- a/app/src/main/res/layout/multi_list_item.xml
+++ b/app/src/main/res/layout/multi_list_item.xml
@@ -5,6 +5,7 @@
     android:background="#EFFFFFFF">
 
     <RelativeLayout
+        android:id="@+id/rl_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
