--- a/app/src/main/res/layout/fragment_song_list_tab.xml
+++ b/app/src/main/res/layout/fragment_song_list_tab.xml
@@ -28,10 +28,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="240dp"
                 android:background="@mipmap/ic_launcher"
-                android:paddingBottom="10dp"
                 app:layout_collapseMode="pin"
                 app:layout_collapseParallaxMultiplier="0.7">
 
+                <View
+                    android:layout_width="match_parent"
+                    android:background="#30000000"
+                    android:layout_height="match_parent"/>
                 <ImageView
                     android:id="@+id/head_img"
                     android:layout_width="60dp"
@@ -93,7 +96,7 @@
             app:tabIndicatorColor="#EC2E2E"
             app:tabIndicatorHeight="2.0dp"
             app:tabSelectedTextColor="#EC2E2E"
-            app:tabTextColor="#ced0d3">
+            app:tabTextColor="#000000">
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
 
