--- a/app/src/main/res/layout/fragment_comment_item.xml
+++ b/app/src/main/res/layout/fragment_comment_item.xml
@@ -62,21 +62,14 @@
         android:layout_toRightOf="@id/comment_user_pic"
         android:background="@drawable/comment_bg"
         android:orientation="horizontal"
-        android:padding="10dp">
-
-        <TextView
-            android:id="@+id/reply_name_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="\@安兹乌尔恭:"
-            android:textColor="#3399FF"
-            android:textSize="15sp" />
+        android:padding="6dp">
 
         <TextView
             android:id="@+id/reply_msg_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="罪域的骨终为王"
+            android:lineSpacingMultiplier="1.3"
+            android:text="\@罪域的骨终为王:233"
             android:textSize="15sp" />
     </LinearLayout>
 
