--- a/app/src/main/res/layout/fragment_song_list_adapter_item.xml
+++ b/app/src/main/res/layout/fragment_song_list_adapter_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="60dp">
 
     <LinearLayout
+        android:id="@+id/music_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
