--- a/app/src/main/res/layout/main_billboard_item.xml
+++ b/app/src/main/res/layout/main_billboard_item.xml
@@ -4,6 +4,7 @@
     android:background="#FFFFFF"
     android:layout_height="wrap_content">
 <RelativeLayout
+    android:id="@+id/rl_layout"
     android:layout_width="match_parent"
     android:clickable="true"
     android:background="?android:attr/selectableItemBackground"
