--- a/app/src/main/res/layout/fragment_mv_item.xml
+++ b/app/src/main/res/layout/fragment_mv_item.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF">
+    android:background="#EFFFFFFF">
 
     <RelativeLayout
         android:id="@+id/rl_layout"
@@ -12,36 +12,41 @@
         android:clickable="true">
 
         <ImageView
-            android:id="@+id/artist_img"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="8dp"
+            android:id="@+id/mv_img"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"/>
+            android:scaleType="centerCrop"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:src="@mipmap/ic_launcher" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/artist_img"
+            android:layout_height="65dp"
+            android:layout_toRightOf="@id/mv_img"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/artist_name"
+                android:id="@+id/mv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="mv"
                 android:textColor="#000000"
-                android:textSize="15sp"
-                android:text="林俊杰" />
+                android:textSize="18sp" />
+
             <TextView
-                android:id="@+id/artist_followers"
+                android:id="@+id/mv_artist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textSize="12sp"
-                android:textColor="@color/gray"
-                android:text="粉丝" />
+                android:paddingTop="8dp"
+                android:singleLine="true"
+                android:text="歌手"
+                android:textColor="#50000000"
+                android:textSize="15sp" />
         </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
