--- a/app/src/main/res/layout/multi_list_item.xml
+++ b/app/src/main/res/layout/multi_list_item.xml
@@ -13,17 +13,18 @@
 
         <ImageView
             android:id="@+id/klist_img"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="70dp"
             android:layout_toRightOf="@id/klist_img"
             android:gravity="center_vertical"
             android:orientation="vertical">
@@ -35,17 +36,17 @@
                 android:singleLine="true"
                 android:text="电台名"
                 android:textColor="#000000"
-                android:textSize="15sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/klist_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="5dp"
+                android:paddingTop="8dp"
                 android:singleLine="true"
                 android:text="电台描述"
                 android:textColor="#50000000"
-                android:textSize="12sp" />
+                android:textSize="15sp" />
         </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
