--- a/app/src/main/res/layout/square_item.xml
+++ b/app/src/main/res/layout/square_item.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:drawableLeft="@mipmap/hear_img"
+                android:drawableLeft="@drawable/hear_img"
                 android:drawablePadding="3dp"
                 android:gravity="right"
                 android:text="11万"
@@ -83,7 +83,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:drawableLeft="@mipmap/hear_img"
+                android:drawableLeft="@drawable/hear_img"
                 android:drawablePadding="3dp"
                 android:gravity="right"
                 android:text="11万"
@@ -131,7 +131,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:drawableLeft="@mipmap/hear_img"
+                android:drawableLeft="@drawable/hear_img"
                 android:drawablePadding="3dp"
                 android:gravity="right"
                 android:text="11万"
