--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                     android:layout_centerVertical="true"
                     android:paddingLeft="15dp"
                     android:background="?android:attr/selectableItemBackground"
-                    android:src="@mipmap/lateral_dropdown" />
+                    android:src="@drawable/lateral_dropdown" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
                         android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:background="?android:attr/selectableItemBackground"
-                        android:src="@mipmap/actionbar_music_selected" />
+                        android:src="@drawable/actionbar_music_selected" />
 
                     <ImageView
                         android:id="@+id/recommended_page"
@@ -56,7 +56,7 @@
                         android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:background="?android:attr/selectableItemBackground"
-                        android:src="@mipmap/actionbar_discover_normal" />
+                        android:src="@drawable/actionbar_discover_normal" />
                 </LinearLayout>
             </RelativeLayout>
 
@@ -128,21 +128,21 @@
                         android:layout_width="40dp"
                         android:layout_height="match_parent"
                         android:background="?android:attr/selectableItemBackground"
-                        android:src="@mipmap/playbar_btn_playlist" />
+                        android:src="@drawable/playbar_btn_playlist" />
 
                     <ImageView
                         android:id="@+id/btn_play_and_pause"
                         android:layout_width="60dp"
                         android:layout_height="match_parent"
                         android:background="?android:attr/selectableItemBackground"
-                        android:src="@mipmap/playbar_btn_play" />
+                        android:src="@drawable/playbar_btn_play" />
 
                     <ImageView
                         android:id="@+id/btn_next"
                         android:layout_width="40dp"
                         android:layout_height="match_parent"
                         android:background="?android:attr/selectableItemBackground"
-                        android:src="@mipmap/playbar_btn_next" />
+                        android:src="@drawable/playbar_btn_next" />
                 </LinearLayout>
 
                 <ProgressBar
@@ -160,7 +160,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:background="@mipmap/play_page_bg"
+            android:background="@drawable/play_page_bg"
             android:clickable="true">
 
             <TextView
