--- a/app/src/main/res/layout/fragment_kubillboard.xml
+++ b/app/src/main/res/layout/fragment_kubillboard.xml
@@ -8,6 +8,7 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:fitsSystemWindows="true"
+        android:clipToPadding="true"
         android:layout_height="wrap_content">
 
         <android.support.design.widget.CollapsingToolbarLayout
