--- a/app/src/main/res/layout/fragment_local_music_base.xml
+++ b/app/src/main/res/layout/fragment_local_music_base.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="15dp"
-                android:src="@mipmap/btn_back" />
+                android:src="@drawable/btn_back" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/btn_more" />
+            android:src="@drawable/btn_more" />
     </RelativeLayout>
 
     <android.support.design.widget.TabLayout
