--- a/app/src/main/res/layout/fragment_my_pager.xml
+++ b/app/src/main/res/layout/fragment_my_pager.xml
@@ -4,27 +4,31 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:orientation="vertical">
-<LinearLayout
-    android:id="@+id/local_music_linearLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/ripple_bg"
-    android:clickable="true"
-    android:orientation="horizontal">
-    <ImageView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:id="@+id/local_music_linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@mipmap/local_music_img"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="本地音乐"
-        android:textColor="#000000"
-        android:textSize="16sp" />
-</LinearLayout>
+
+        android:clickable="true"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/local_music_img" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="本地音乐"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
-        android:background="#50000000"
-        android:layout_height="1px" />
+        android:layout_height="1px"
+        android:background="#50000000" />
 </LinearLayout>
