--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="15dp"
-                android:src="@mipmap/btn_back" />
+                android:src="@drawable/btn_back" />
 
             <TextView
                 android:id="@+id/desc"
