--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -10,34 +9,34 @@
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
+        android:background="#DE2C2C"
         android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#F2F2F2"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:id="@+id/head_rl"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:background="#DE2C2C"
-                android:paddingBottom="5dp"
-                android:paddingTop="30dp">
+                android:layout_height="50dp"
+                android:background="#DE2C2C">
 
                 <ImageView
                     android:id="@+id/Lateral_dropdown_img"
-                    android:layout_width="40dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_alignParentBottom="true"
                     android:layout_centerVertical="true"
                     android:paddingLeft="15dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/lateral_dropdown" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
                     android:layout_centerInParent="true"
                     android:orientation="horizontal">
 
@@ -46,6 +45,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_gravity="center"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
                         android:src="@drawable/actionbar_music_selected" />
 
                     <ImageView
@@ -53,6 +53,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_gravity="center"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
                         android:src="@drawable/actionbar_discover_normal" />
                 </LinearLayout>
             </RelativeLayout>
@@ -63,12 +64,6 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="50dp"
                 android:layout_below="@id/head_rl"/>
-            <FrameLayout
-                android:id="@+id/with_play_bar_content_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="50dp">
-            </FrameLayout>
 
             <RelativeLayout
                 android:id="@+id/playback_control_bar"
@@ -124,18 +119,21 @@
                         android:id="@+id/btn_playlist"
                         android:layout_width="40dp"
                         android:layout_height="match_parent"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
                         android:src="@drawable/playbar_btn_playlist" />
 
                     <ImageView
                         android:id="@+id/btn_play_and_pause"
                         android:layout_width="60dp"
                         android:layout_height="match_parent"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
                         android:src="@drawable/playbar_btn_play" />
 
                     <ImageView
                         android:id="@+id/btn_next"
                         android:layout_width="40dp"
                         android:layout_height="match_parent"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
                         android:src="@drawable/playbar_btn_next" />
                 </LinearLayout>
 
@@ -146,7 +144,6 @@
                     android:layout_height="2dp"
                     android:layout_alignParentBottom="true"
                     android:progressDrawable="@drawable/progressbar_color" />
-
             </RelativeLayout>
         </RelativeLayout>
 
@@ -154,6 +151,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left"
+            android:fitsSystemWindows="true"
             android:background="@drawable/play_page_bg"
             android:clickable="true">
 
@@ -170,6 +168,13 @@
                 android:textSize="20sp" />
         </RelativeLayout>
     </android.support.v4.widget.DrawerLayout>
+
+    <FrameLayout
+        android:id="@+id/with_play_bar_content_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/content_fragment"
