--- a/app/src/main/res/layout/fragment_base_head.xml
+++ b/app/src/main/res/layout/fragment_base_head.xml
@@ -4,27 +4,20 @@
     android:layout_height="70dp"
     android:background="#DE2C2C"
     android:paddingTop="20dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginRight="10dp">
-
         <ImageView
             android:id="@+id/btn_back"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_marginLeft="15dp"
             android:src="@drawable/btn_back" />
 
         <TextView
             android:id="@+id/title_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
             android:gravity="center"
             android:singleLine="true"
             android:textColor="#FFFFFF"
             android:textSize="20sp" />
-    </LinearLayout>
 </RelativeLayout>
