--- a/app/src/main/res/layout/fragment_kubillboard.xml
+++ b/app/src/main/res/layout/fragment_kubillboard.xml
@@ -53,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                android:layout_marginTop="20dp"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
         </android.support.design.widget.CollapsingToolbarLayout>
