--- a/app/src/main/res/layout/multi_list_item.xml
+++ b/app/src/main/res/layout/multi_list_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#EFFFFFFF">
-
+    android:background="#FEFFFF">
     <RelativeLayout
         android:id="@+id/rl_layout"
         android:layout_width="match_parent"
@@ -49,4 +48,4 @@
                 android:textSize="15sp" />
         </LinearLayout>
     </RelativeLayout>
-</FrameLayout>
+</RelativeLayout>
